--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
 
 @Article{Albino2019,
   author  = {Albino, Matheus Alves},
+  bibtex_show={true},
   journal = {Revista do Arquivo},
   title   = {Mortalidade e saúde a partir dos registros hospitalares: Santas Casas de Misericórdia e Hospitais de Isolamento, 1875-1900},
   year    = {2019},
@@ -20,6 +21,7 @@
 
 @Thesis{Albino2017,
   author = {Albino, Matheus Alves},
+  bibtex_show={true},
   groups = {Mortalidade, Escravidão},
   school = {Faculdade de Economia, Administração e Contabilidade de Ribeirão Preto, Universidade de São Paulo},
   title  = {Escravos e livres pobres da Santa Casa de Misericórdia de Campinas (1876-1882)},
@@ -30,6 +32,7 @@
 @Thesis{Albino2020,
   address   = {Campinas, SP},
   author    = {Albino, Matheus Alves},
+  bibtex_show={true},
   eventdate = {2020},
   eventyear = {2020},
   groups    = {Mortalidade},
@@ -44,6 +47,7 @@
 
 @Article{Albino2021,
   author  = {Albino, Matheus Alves},
+  bibtex_show={true},
   journal = {Revista de Demografía Histórica -- Journal of Iberoamerican Population Studies},
   title   = {Morbidade e mortalidade durante as crises de febre amarela em Campinas, São Paulo, 1889–1900},
   year    = {2021},
@@ -55,6 +59,7 @@
 
 @Article{Albino2018,
   author  = {Albino, Matheus Alves and Marcondes, Renato Leite},
+  bibtex_show={true},
   journal = {Revista Brasileira de Estudos de População},
   title   = {Diferenciais de mortalidade em um hospital filantrópico: a Santa Casa de Misericórdia de Campinas (1876-1885)},
   year    = {2018},
