--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@Article{Garcia2022,
+  author  = {Bruna Carolina Garcia and Matheus Alves Albino and Glaucia dos Santos Marcondes},
+  journal = {Notas de Población},
+  bibtex_show={true},
+  title   = {Factores asociados con el desempeño de las actividades de cuidado en el Brasil: análisis de la Encuesta Nacional de Hogares Continua (PNAD Continua) de 2019},
+  year    = {2022},
+  number  = {114},
+  pages   = {37-54},
+  volume  = {49},
+  pdf = {https://repositorio.cepal.org/bitstream/handle/11362/48112/S2200216_es.pdf?sequence=1&isAllowed=y}
+}
+
 @Article{Albino2019,
   author  = {Albino, Matheus Alves},
   bibtex_show={true},
@@ -16,6 +28,7 @@
   file    = {:Albino2019 - Mortalidade E Saúde a Partir Dos Registros Hospitalares_ Santas Casas De Misericórdia E Hospitais De Isolamento, 1875 1900.pdf:PDF},
   groups  = {Mortalidade},
   url     = {http://www.arquivoestado.sp.gov.br/revista_do_arquivo/08/pdf/Artigo_6_26_04.pdf},
+  pdf     = {http://www.arquivoestado.sp.gov.br/revista_do_arquivo/08/pdf/Artigo_6_26_04.pdf},
   urldate = {2019-06-01},
 }
 
