--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
   number  = {114},
   pages   = {37-54},
   volume  = {49},
-  pdf = {https://repositorio.cepal.org/bitstream/handle/11362/48112/S2200216_es.pdf?sequence=1&isAllowed=y}
+  pdf = {https://repositorio.cepal.org/bitstream/handle/11362/48112/S2200216_es.pdf?sequence=1&isAllowed=y},
+  selected={true},
 }
 
 @Article{Albino2019,
@@ -30,6 +31,7 @@
   url     = {http://www.arquivoestado.sp.gov.br/revista_do_arquivo/08/pdf/Artigo_6_26_04.pdf},
   pdf     = {http://www.arquivoestado.sp.gov.br/revista_do_arquivo/08/pdf/Artigo_6_26_04.pdf},
   urldate = {2019-06-01},
+  selected={true},
 }
 
 @Thesis{Albino2017,
@@ -39,6 +41,7 @@
   school = {Faculdade de Economia, Administração e Contabilidade de Ribeirão Preto, Universidade de São Paulo},
   title  = {Escravos e livres pobres da Santa Casa de Misericórdia de Campinas (1876-1882)},
   type   = {Monografia (Graduação em Economia Empresarial e Controladoria)},
+  html = {https://www.fearp.usp.br/institucional/item/5956-alunos-da-fea-rp-sao-premiados-por-conselho-de-economia.html},
   year   = {2017},
 }
 
@@ -51,9 +54,10 @@
   groups    = {Mortalidade},
   pagetotal = {165},
   school    = {Instituto de Filosofia e Ciências Humanas, Universidade Estadual de Campinas},
-  subtitle  = {mortalidade e morbidade em Campinas, 1875-1900},
-  title     = {Revelando a doença e a morte},
+  title     = {Revelando a doença e a morte: mortalidade e morbidade em Campinas, 1875-1900},
   type      = {Dissertação (Mestrado em Demografia)},
+  pdf = {https://repositorio.unicamp.br/Busca/Download?codigoArquivo=494610},
+  html = {https://repositorio.unicamp.br/Acervo/Detalhe/1128926},
   urldate   = {2021-09-06},
   year      = {2020},
 }
@@ -63,10 +67,13 @@
   bibtex_show={true},
   journal = {Revista de Demografía Histórica -- Journal of Iberoamerican Population Studies},
   title   = {Morbidade e mortalidade durante as crises de febre amarela em Campinas, São Paulo, 1889–1900},
+  pdf = {https://dialnet.unirioja.es/descarga/articulo/8051060.pdf},
+  html = {https://dialnet.unirioja.es/servlet/articulo?codigo=8051060},
   year    = {2021},
   number  = {3},
   pages   = {9-29},
   volume  = {39},
+  selected={true},
   address = {Barcelona, Espanha},
 }
 
@@ -75,6 +82,8 @@
   bibtex_show={true},
   journal = {Revista Brasileira de Estudos de População},
   title   = {Diferenciais de mortalidade em um hospital filantrópico: a Santa Casa de Misericórdia de Campinas (1876-1885)},
+  html = {https://www.rebep.org.br/revista/article/view/1299},
+  pdf = {https://www.rebep.org.br/revista/article/view/1299/pdf},
   year    = {2018},
   number  = {2},
   pages   = {1-20},
